--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+poise = "0.6.1"
+tokio = {version = "1.48.0", features = ["rt-multi-thread"]}
+tracing-subscriber = "0.3.20"
