--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.42"
 poise = "0.6.1"
+regex = "1.12.2"
+sqlite = "0.37.0"
 tokio = {version = "1.48.0", features = ["rt-multi-thread"]}
 tracing-subscriber = "0.3.20"
