--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
 chrono = "0.4.42"
-poise = "0.6.1"
+poise = {version = "0.6.1", features = ["cache"]}
 regex = "1.12.2"
 sqlite = "0.37.0"
 tokio = {version = "1.48.0", features = ["rt-multi-thread"]}
